opam-version: "2.0"
name: "CoAR"
version: "3.3"
maintainer: "Hiroshi Unno <hiroshi.unno@acm.org>"
authors: "Hiroshi Unno <hiroshi.unno@acm.org>"
homepage: "https://bitbucket.org/uhiro/fptprove"
bug-reports: "https://bitbucket.org/uhiro/fptprove/issues?status=new&status=open"
synopsis: "Collection of Automated Reasoners"
description: ""
pin-depends: [
  ["libsvm.0.10.0~modified" "git+https://github.com/hiroshi-unno/libsvm-ocaml.git"]
]
depends: [
  "ocaml" {>= "5.3.0"}
  "core"
  "core_unix"
  "domainslib"
  "menhir"
  "ppx_deriving_yojson"
  "ocaml-compiler-libs"
  "ocamlgraph"
  "zarith"
  "z3"
  "minisat"
  "libsvm" {= "0.10.0~modified"}
  "camlzip"
  "apronext"
]
build: ["dune" "build"]
