(library
 (name Mu2CHC)
 (public_name CoAR.Mu2CHC)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries core yojson z3 str CoAR.common CoAR.ast CoAR.Z3Smt CoAR.muCLP)
 (modules
  config
  rankingFunction
  rfunProver
  recLimitProver
  simpleRecLimitProver
  mygraph)
 (synopsis "A fixpoint logic validity checker based on CHC solving"))

;(test
;  (name test)
;  (modules test)
;  (libraries
;    oUnit
;    testutil
;    ast
;    CoAR.SMT
;    reclimitprover
;    z3
;    core
;    CoAR))

;(test
;  (name test)
;  (modules test)
;  (libraries
;    oUnit
;    testutil
;    ast
;    CoAR.SMT
;    rfunprover
;    z3
;    core
;    CoAR
;  ))
