(menhir
 (modules parser))

(ocamllex
 (modules lexer))

(library
 (name QMuCLP)
 (public_name CoAR.QMuCLP)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries core CoAR.pCSP CoAR.ast CoAR.common CoAR.LTS)
 (modules pred problem lexer parser util)
 (synopsis "The definition of quantitative muCLP"))
