(library
 (name ZundaSmt)
 (public_name CoAR.ZundaSmt)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries
  minisat
  z3
  core
  lp
  lp-glpk
  lp-gurobi
  CoAR.Z3Smt
  CoAR.MIP
  CoAR.MIPSolver
  CoAR.SATSolver
  CoAR.ZundaSmt.adt
  CoAR.ZundaSmt.lia
  CoAR.SAT
  CoAR.SMT)
 (modules config solver)
 (synopsis "An SMT solver based on CDCL(T) and SID"))
