(library
 (name adt)
 (public_name CoAR.ZundaSmt.adt)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries minisat z3 core CoAR.Z3Smt CoAR.SATSolver CoAR.SAT CoAR.SMT)
 (modules
  bidirectionalClosure
  congruenceClosure
  unificationClousure
  unionFind
  equivalenceClosure
  solver)
 (synopsis "An ADT theory solver"))
